# esp32_meizu_remoter_gateway

./: CMakeLists.txt  Makefile  README.md  sdkconfig
main/: BLEAddress.cpp  BLEAddress.h  BLEUUID.cpp  BLEUUID.h  CMakeLists.txt  GATTDevice.cpp  GATTDevice.h  GATTRemoteCharacteristic.cpp  GATTRemoteCharacteristic.h  GATTRemoteService.cpp  GATTRemoteService.h  Kconfig.projbuild  Kernel.cpp  Kernel.h  Remoter.cpp  Remoter.h  RemoterInfo.cpp  RemoterInfo.h  SemaphoreLock.cpp  SemaphoreLock.h  SocketClient.cpp  SocketClient.h  SocketServer.cpp  SocketServer.h  led.c  led.h  main.cpp  mdnsmd.c  mdnsmd.h  nvsstorage.c  nvsstorage.h  utils.c  utils.h  wifi.c  wifi.h
