idf_component_register(SRCS "RemoterInfo.cpp" "Remoter.cpp" "BLEAddress.cpp" "BLEUUID.cpp" "GATTDevice.cpp" "GATTRemoteCharacteristic.cpp" 
    "GATTRemoteService.cpp" "Kernel.cpp" "mdnsmd.c" "nvsstorage.c" "utils.c" 
    "SemaphoreLock.cpp" "SocketClient.cpp" "SocketServer.cpp" "led.c" "wifi.c" "main.cpp"
                    INCLUDE_DIRS ".")
